--- a/src/parallax/parallax.css
+++ b/src/parallax/parallax.css
@@ -2,16 +2,16 @@
 .parallax-wrapper{
     position: relative;
     max-width: 100vw;
-    height: 100%;
-    min-height: 80vh;
-    max-height: 80vh;
+    height: 60%;
+    min-height: 60vh;
+    max-height: 60vh;
     overflow: hidden;
 }
 
 .parallax{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 60%;
     max-height: none;
     object-fit: cover;
     transition: none;
